Added new endpoint which will take list of chapters
