# Routes/administration.js
@@ -6,7 +6,7 @@ const administrationsControllers = require("../Controllers/administration");
 const router = express.Router();
 
 router.post(
-  "/schoolSubject",
+  "/school-subject",
   [
     check("nameOfSchoolSubject")
       .exists()
@@ -279,273 +279,24 @@ router.patch(
   }
 );
 
-router.get("/users", verifyToken, (req, res) => {
+router.get("/chapters-to-remove", (req, res) => {
   const response = {
-    messages: {},
-    listOfUsers: [],
+    messages: {
+      message: [],
+      error: [],
+    },
   };
-  jwt.verify(
-    req.token,
-    process.env.S3_SECRETKEY,
-    async (jwtError, authData) => {
-      if (jwtError) {
-        response.messages = { error: "Błąd uwierzytelniania!" };
-        res.status(403).json(response);
-      } else {
-        const checkUser = await checkExistsOfUserEmail(
-          Model.Users,
-          authData.email
-        );
-        if (checkUser !== false) {
-          if (authData.name === process.env.S3_ADMIN_PERMISSIONS) {
-            const takeListOfUsers = await takeListOfUsersWhichAreToRemove(
-              Model.Users
-            );
-            if (takeListOfUsers !== false) {
-              response.listOfUsers = takeListOfUsers;
-              res.status(200).json(response);
-            } else {
-              response.messages = {
-                error: "Nie udało się pobrać listy użytkowników!",
-              };
-              res.status(400).json(response);
-            }
-          } else {
-            response.messages = {
-              error: "Nie posiadasz uprawnień!",
-            };
-            res.status(400).json(response);
-          }
-        } else {
-          response.messages = { error: "Użytkownik nie istnieje!" };
-          res.status(400).json(response);
-        }
-      }
-    }
-  );
-});
 
-router.delete(
-  "/user",
-  [
-    check("user_id")
-      .exists()
-      .withMessage("Brak wymaganych danych!")
-      .isUUID()
-      .withMessage("Niepoprawny format id użytkownika"),
-  ],
-  verifyToken,
-  (req, res) => {
-    const error = validationResult(req);
-    const response = {
-      messages: {},
-      validationErrors: [],
-    };
-    if (!error.isEmpty()) {
-      response.validationErrors = error
-        .array({ onlyFirstError: true })
-        .map((err) => ({ [err.param]: err.msg }));
-      res.status(400).json(response);
-    } else {
-      jwt.verify(
-        req.token,
-        process.env.S3_SECRETKEY,
-        async (jwtError, authData) => {
-          if (jwtError) {
-            response.messages = { error: "Błąd uwierzytelniania!" };
-            res.status(403).json(response);
-          } else {
-            const checkUser = await checkExistsOfUserEmail(
-              Model.Users,
-              authData.email
-            );
-            if (checkUser !== false) {
-              if (authData.name === process.env.S3_ADMIN_PERMISSIONS) {
-                const findUser = await findUserById(
-                  Model.Users,
-                  req.body.user_id
-                );
-                if (findUser !== false) {
-                  const deleteUser = await deleteUserById(
-                    Model.Users,
-                    req.body.user_id
-                  );
-                  if (deleteUser !== false) {
-                    response.messages = {
-                      message: "Pomyślnie usunięto użytkownika!",
-                    };
-                    res.status(200).json(response);
-                  } else {
-                    response.messages = {
-                      error: "Nie udało się usunąć użytkownika!",
-                    };
-                    res.status(400).json(response);
-                  }
-                } else {
-                  response.messages = {
-                    error: "Użytkownik nie istnieje!",
-                  };
-                  res.status(404).json(response);
-                }
-              } else {
-                response.messages = {
-                  error: "Nie posiadasz uprawnień, aby móc usunąć użytkownika!",
-                };
-                res.status(400).json(response);
-              }
-            } else {
-              response.messages = { error: "Użytkownik nie istnieje!" };
-              res.status(400).json(response);
-            }
-          }
-        }
-      );
-    }
+  const headerValidationResults = verifyToken(req);
+
+  if (headerValidationResults === false) {
+    response.messages.error.push(
+      "Nie udało się przeprowadzić procesu uwierzytelniania!"
+    );
+    res.status(403).send(response);
+  } else {
+    administrationsControllers.takeAllChaptersWhichAreToRemove(req, res);
   }
-);
-
-router.get("/allUsers", verifyToken, (req, res) => {
-  const response = {
-    messages: {},
-    listOfUsers: [],
-  };
-  jwt.verify(
-    req.token,
-    process.env.S3_SECRETKEY,
-    async (jwtError, authData) => {
-      if (jwtError) {
-        response.messages = { error: "Błąd uwierzytelniania!" };
-        res.status(403).json(response);
-      } else {
-        const checkUser = await checkExistsOfUserEmail(
-          Model.Users,
-          authData.email
-        );
-        if (checkUser !== false) {
-          if (authData.name === process.env.S3_ADMIN_PERMISSIONS) {
-            const takeAdminRoleId = await findAdminRoleId(
-              Model.TypesOfUsersRoles
-            );
-            const takeListOfUsers = await takeAllUsers(
-              Model.Users,
-              takeAdminRoleId
-            );
-            if (takeListOfUsers !== false) {
-              response.listOfUsers = takeListOfUsers;
-              res.status(200).json(response);
-            } else {
-              response.messages = {
-                error: "Nie udało się pobrać listy użytkowników!",
-              };
-              res.status(400).json(response);
-            }
-          } else {
-            response.messages = {
-              error: "Nie posiadasz uprawnień!",
-            };
-            res.status(400).json(response);
-          }
-        } else {
-          response.messages = { error: "Użytkownik nie istnieje!" };
-          res.status(400).json(response);
-        }
-      }
-    }
-  );
 });
-
-router.put(
-  "/permissions",
-  [
-    check("user_id")
-      .exists()
-      .withMessage("Brak wymaganych danych!")
-      .isUUID()
-      .withMessage("Niepoprawny format id użytkownika"),
-  ],
-  verifyToken,
-  (req, res) => {
-    const error = validationResult(req);
-    const response = {
-      messages: {},
-      validationErrors: [],
-    };
-    if (!error.isEmpty()) {
-      response.validationErrors = error
-        .array({ onlyFirstError: true })
-        .map((err) => ({ [err.param]: err.msg }));
-      res.status(400).json(response);
-    } else {
-      jwt.verify(
-        req.token,
-        process.env.S3_SECRETKEY,
-        async (jwtError, authData) => {
-          if (jwtError) {
-            response.messages = { error: "Błąd uwierzytelniania!" };
-            res.status(403).json(response);
-          } else {
-            const checkUser = await checkExistsOfUserEmail(
-              Model.Users,
-              authData.email
-            );
-            if (checkUser !== false) {
-              if (authData.name === process.env.S3_ADMIN_PERMISSIONS) {
-                const findUser = await findUserById(
-                  Model.Users,
-                  req.body.user_id
-                );
-                if (findUser !== false) {
-                  const findIdOfTeacher = await findIdOfTeacherPermission(
-                    Model.TypesOfUsersRoles
-                  );
-                  if (findIdOfTeacher !== false) {
-                    const updatePermission =
-                      await updateUserPermissionToTeacherPermissions(
-                        Model.Users,
-                        findIdOfTeacher,
-                        req.body.user_id
-                      );
-                    if (updatePermission !== false) {
-                      response.messages = {
-                        message:
-                          "Pomyślnie zmieniono uprawnienia dla użytkownika!",
-                      };
-                      res.status(200).json(response);
-                    } else {
-                      response.messages = {
-                        error:
-                          "Nie udało się zmienić uprawnień wybranemu użytkownikowi!",
-                      };
-                      res.status(400).json(response);
-                    }
-                  } else {
-                    response.messages = {
-                      error: "Wybrana rola użytkownika nie istnieje!",
-                    };
-                    res.status(404).json(response);
-                  }
-                } else {
-                  response.messages = {
-                    error: "Użytkownik nie istnieje!",
-                  };
-                  res.status(404).json(response);
-                }
-              } else {
-                response.messages = {
-                  error:
-                    "Nie posiadasz uprawnień, aby zmienić uprawnienia dla użytkownika!",
-                };
-                res.status(400).json(response);
-              }
-            } else {
-              response.messages = { error: "Użytkownik nie istnieje!" };
-              res.status(400).json(response);
-            }
-          }
-        }
-      );
-    }
-  }
-);
 
 module.exports = router;
